apps/base/ai-workloads/poc-py-llm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc-py-llm
  labels:
    app: poc-py-llm
spec:
  selector:
    app: poc-py-llm
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  type: ClusterIP
