apps/base/ai-workloads/poc-py-llm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: poc-py-llm
spec:
  parentRefs:
    - name: tls-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "assistant.home.arpa"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: poc-py-llm
          port: 8000
